--- a/src/app/my-counter/my-counter.component.html
+++ b/src/app/my-counter/my-counter.component.html
@@ -1,1 +1,5 @@
-<h2>My counter works</h2>
+<div>Current Count: {{ count$ | async }}</div>
+
+<button (click)="increment()">Increment</button>
+<button (click)="decrement()">Decrement</button>
+<button (click)="reset()">Reset Counter</button>
